--- a/css/embedvideo.css
+++ b/css/embedvideo.css
@@ -1,47 +1,47 @@
-div.tcenter.embedvideo,
-div.embedvideo.ev_center  {
+div.tcenter.EmbedingCode,
+div.EmbedingCode.ev_center  {
 	margin-left: auto;
 	margin-right: auto;
 }
 
-div.embedvideo.ev_center > .embedvideowrap {
+div.EmbedingCode.ev_center > .EmbedingCodewrap {
 	margin-left: auto;
 	margin-right: auto;
 }
 
-div.embedvideo.ev_center .thumbcaption {
+div.EmbedingCode.ev_center .thumbcaption {
 	text-align: center;
 }
 
 /* @noflip */
-div.embedvideo.ev_left {
+div.EmbedingCode.ev_left {
 	clear: left;
 	float: left;
 }
 
 /* @noflip */
-div.embedvideo.ev_right {
+div.EmbedingCode.ev_right {
 	clear: right;
 	float: right;
 }
 
-div.embedvideo.ev_inline {
+div.EmbedingCode.ev_inline {
 	display: inline-block;
 }
 
-div.embedvideo.ev_top {
+div.EmbedingCode.ev_top {
 	vertical-align: top;
 }
 
-div.embedvideo.ev_middle {
+div.EmbedingCode.ev_middle {
 	vertical-align: middle;
 }
 
-div.embedvideo.ev_bottom {
+div.EmbedingCode.ev_bottom {
 	vertical-align: bottom;
 }
 
-div.embedvideo.ev_baseline {
+div.EmbedingCode.ev_baseline {
 	vertical-align: baseline;
 }
 
